Fixed bug where images larger than canvas are cropped

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap');
 
 body {
-    background-color: lightblue;
+    background-color: #3A93BD;
   }
 
   .display-div {
@@ -67,7 +67,7 @@ body {
     font-family: 'Poppins';
     font-weight: bold;
     color: black;
-    background-color: rgb(0, 225, 255);
+    background-color: #0084EF;
     border-radius: 5px;
     cursor: pointer;
   }
@@ -80,7 +80,7 @@ body {
     margin-right: 25%;
     margin-left: 25%;
     margin-top: 2%;
-    background-color: rgb(62, 175, 212);
+    background-color: #292E33;
     transition: 0.3s;
     font-family: 'Poppins';
     font-weight: 500;
@@ -96,9 +96,10 @@ body {
   }
 
   .photo-reciever:hover {
-    background-color:aquamarine;
+    background-color:#344757;
     transition: 0.3s;
     font-family: 'Poppins';
+    border: 1px solid black
   }
 
   .input-grid {
